Update README.md dan favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="./style.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-        <link rel="icon" href="https://www.flaticon.com/svg/vstatic/svg/203/203025.svg?token=exp=1612870383~hmac=71a9cbc7f0c0c7ec5dd30820a7240f7f">
+        <link rel="icon" href="./images/favicon.ico">
     </head>
     <body>
         <h2>Visited Indonesian Provinces</h2>
